Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an5/an5.179_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an5/an5.179_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.179_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an5.179:1.3": "„Sāriputta, da sind diese weiß gekleideten Laien, die ihr Verhalten mit den fünf Ethikregeln zügeln und die, wann immer sie wollen, ohne Mühe und Not, die vier Zustände seliger Meditation in diesem Leben erlangen, die zum höheren Geist gehören. Über sie sollst du wissen, dass sie, wenn sie das wünschen, von sich selbst erklären können: ",
   "an5.179:1.4": "‚Ich habe mit der Wiedergeburt in der Hölle, dem Tierreich und dem Gespensterreich abgeschlossen. Mit allen verlorenen Orten habe ich abgeschlossen, mit allen schlechten Orten, mit der Unterwelt. Ich bin in den Strom eingetreten! Ich muss nicht mehr in der Unterwelt wiedergeboren werden und bin für das Erwachen bestimmt.‘ ",
   "an5.179:2.1": "Und was sind die fünf Ethikregeln, mit denen sie ihr Verhalten zügeln? ",
-  "an5.179:2.2": "Da tötet ein edler Schüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
+  "an5.179:2.2": "Da tötet ein edler Schüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.179:2.3": "Das sind die fünf Ethikregeln, mit denen sie ihr Verhalten zügeln. ",
   "an5.179:3.1": "Und was sind die vier Zustände seliger Meditation in diesem Leben, die zum höheren Geist gehören, die sie erlangen, wann immer sie wollen, ohne Mühe und Not? ",
   "an5.179:3.2": "Da hat ein edler Schüler auf Erfahrung gegründete Zuversicht zum Buddha: ",
