Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -14,5 +14,5 @@
   "iti70:6.1": "senza educazione e senza fare merito, ",
   "iti70:6.2": "in una vita breve ",
   "iti70:6.3": "il folle, quando il corpo perisce, ",
-  "iti70:6.4": "x "
+  "iti70:6.4": "rinasce all’inferno.’’ "
 }
