Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti70:5.2": "proferendo parole in modo sbagliato, ",
   "iti70:5.3": "compiendo azioni corporali sbagliate, ",
   "iti70:5.4": "così la persona ",
-  "iti70:6.1": "senza educazione e senza fare merito, ",
+  "iti70:6.1": "con poca educazione e poco merito, ",
   "iti70:6.2": "in una vita breve ",
   "iti70:6.3": "il folle, quando il corpo perisce, ",
   "iti70:6.4": "rinasce all’inferno.’’ "
