Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti70:4.1": "",
   "iti70:4.2": "",
   "iti70:5.1": "Dirigendo la mente nel modo sbagliato, ",
-  "iti70:5.2": "proferendo parole in modo sbagliato, ",
+  "iti70:5.2": "proferendo parole nel modo sbagliato, ",
   "iti70:5.3": "compiendo azioni corporali sbagliate, ",
   "iti70:5.4": "così la persona ",
   "iti70:6.1": "con poca educazione e poco merito, ",
