--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -13,6 +13,6 @@
   "iti70:5.4": "così la persona ",
   "iti70:6.1": "poco istruita non compie azioni meritevoli (con poca istruzione e poco merito) ",
   "iti70:6.2": "nella propria breve vita. ",
-  "iti70:6.3": "il folle, quando il corpo perisce, ",
+  "iti70:6.3": "Quel folle, quando il corpo perisce, ",
   "iti70:6.4": "rinasce all’inferno.’’ "
 }
