--- a/translation/de/sabbamitta/sutta/an/an8/an8.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.26_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an8.26:1.4": "„Jīvaka, da hat jemand Zuflucht zum Buddha, zur Lehre und zum Saṅgha genommen. ",
   "an8.26:1.5": "Insofern ist jemand ein Laienschüler.“ ",
   "an8.26:2.1": "„Aber inwiefern ist jemand ein sittlicher Laienschüler?“ ",
-  "an8.26:2.2": "„Da tötet ein Laienschüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
+  "an8.26:2.2": "„Da tötet ein Laienschüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an8.26:2.3": "Insofern ist jemand ein sittlicher Laienschüler.“ ",
   "an8.26:3.1": "„Aber inwiefern ist jemand ein Laienschüler, der zum eigenen Nutzen übt, nicht zum Nutzen anderer?“ ",
   "an8.26:3.2": "„Da hat ein Laienschüler das Vertrauen vervollkommnet, aber ermuntert andere nicht, das Gleiche zu tun; er hat das sittliche Verhalten vervollkommnet … er hat die Großzügigkeit vervollkommnet … er sieht gerne die Mönche  und Nonnen … er hört gerne die wahre Lehre … Lehren, die er gehört hat, kann er gut behalten … er untersucht die Bedeutung der Lehren, die er behalten hat, aber ermuntert andere nicht, das Gleiche zu tun. ",
