Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.40_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.40_translation-de-sabbamitta.json
@@ -16,6 +16,6 @@
   "an8.40:6.2": "Zumindest aber führt sie für einen Menschen dazu, dass er unangenehme Dinge zu hören bekommt. ",
   "an8.40:7.1": "Unsinnreden führt, wenn es gepflegt, entwickelt und gemehrt wird, in die Hölle, ins Tierreich oder ins Gespensterreich. ",
   "an8.40:7.2": "Zumindest aber führt sie für einen Menschen dazu, dass das, was er sagt, nicht ernst genommen wird. ",
-  "an8.40:8.1": "Das Trinken von Alkohol, der nachlässig macht, führt, wenn es gepflegt, entwickelt und gemehrt wird, in die Hölle, ins Tierreich oder ins Gespensterreich. ",
+  "an8.40:8.1": "Das Trinken von Rauschmitteln wie Bier, Wein und Branntwein führt, wenn es gepflegt, entwickelt und gemehrt wird, in die Hölle, ins Tierreich oder ins Gespensterreich. ",
   "an8.40:8.2": "Zumindest aber führt es für einen Menschen dazu, dass er geisteskrank wird.“ "
 }
