--- a/translation/de/sabbamitta/sutta/an/an5/an5.178_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.178_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an5.178:4.14": "„Herr, so etwas haben wir gesehen und davon gehört und wir werden wieder davon hören.“ ",
   "an5.178:5.1": "„Was meint ihr, Mönche und Nonnen? ",
   "an5.178:5.2": "Habt ihr jemals gesehen oder gehört, ",
-  "an5.178:5.3": "dass ein Mensch das Trinken von Rauschmitteln wie Bier, Wein und Branntwein aufgegeben hat und diese Dinge nicht mehr trinkt, ",
+  "an5.178:5.3": "dass ein Mensch das Trinken von Rauschmitteln wie Bier, Wein und Branntwein aufgegeben hat und keine Rauschmittel mehr trinkt, ",
   "an5.178:5.4": "und weil er das getan hat, lassen die Könige ihn festnehmen, lassen ihn hinrichten, ins Gefängnis werfen oder verbannen oder verfahren mit ihm, wie der Fall es erfordert?“ ",
   "an5.178:5.5": "„Nein, Herr.“ ",
   "an5.178:5.6": "„Gut, Mönche und Nonnen! ",
