--- a/translation/de/sabbamitta/sutta/an/an8/an8.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.41_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "an8.41:5.2": "Auch ich will für diesen Tag und diese Nacht das Lügen aufgeben und nicht lügen. Ich will die Wahrheit sagen und mich an die Wahrheit halten. Ich will ehrlich und verlässlich sein und will die Welt nicht mit meinen Worten hereinlegen. ",
   "an8.41:5.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten.‘ ",
   "an8.41:5.4": "Das ist der vierte Faktor. ",
-  "an8.41:6.1": "‚Solange sie leben, geben die Vollendeten das Trinken von Rauschmitteln wie Bier, Wein und Branntwein auf und trinken diese Dinge nicht mehr. ",
+  "an8.41:6.1": "‚Solange sie leben, geben die Vollendeten das Trinken von Rauschmitteln wie Bier, Wein und Branntwein auf und trinken keine Rauschmittel mehr. ",
   "an8.41:6.2": "Auch ich will für diesen Tag und diese Nacht das Trinken von Rauschmitteln wie Bier, Wein und Branntwein aufgeben und diese Dinge nicht trinken. ",
   "an8.41:6.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten.‘ ",
   "an8.41:6.4": "Das ist der fünfte Faktor. ",
