--- a/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
@@ -1,4 +1,4 @@
 {
-  "iti71:2.1": "Cercatori, ho visto creature dotate di condotta* appropriata* corporale*, verbale*, mentale*, che non criticano gli arahant, hanno una cattiva visione delle cose e compiono azioni in base a questa cattiva visione delle cose. ",
+  "iti71:2.1": "Cercatori, ho visto creature dotate di condotta* appropriata* corporale*, verbale*, mentale*, che non criticano gli arahant, hanno una corretta visione delle cose e compiono azioni in base a questa corretta visione delle cose. ",
   "iti71:5.1": "Dirigendo la mente verso la verità/giusto/corretto, "
 }
