--- a/translation/de/sabbamitta/sutta/an/an8/an8.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.50_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "an8.50:7.3": "So hat eine Frauensperson das Vertrauen vervollkommnet. ",
   "an8.50:8.1": "Und wie hat eine Frauensperson das sittliche Verhalten vervollkommnet? ",
   "an8.50:8.2": "Sie tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht ",
-  "an8.50:8.3": "und trinkt keinen Alkohol, der nachlässig macht. ",
+  "an8.50:8.3": "und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an8.50:8.4": "So hat eine Frauensperson das sittliche Verhalten vervollkommnet. ",
   "an8.50:9.1": "Und wie hat eine Frauensperson die Großzügigkeit vervollkommnet? ",
   "an8.50:9.2": "Sie lebt zu Hause und hat den Fleck des Geizes entfernt, gibt großzügig her, hat eine offene Hand, freut sich am Loslassen, ist der Wohltätigkeit verpflichtet und liebt es, zu geben und zu teilen. ",
