--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti70:4.2": "",
   "iti70:5.1": "Dirigendo la mente incorrettamente (nel modo sbagliato), ",
   "iti70:5.2": "proferendo parole incorrettamente (nel modo sbagliato), ",
-  "iti70:5.3": "compiendo azioni corporali sbagliate, ",
+  "iti70:5.3": "compiendo azioni corporali incorrettamente (nel modo sbagliato), ",
   "iti70:5.4": "così la persona ",
   "iti70:6.1": "poco istruita non compie azioni meritevoli (con poca istruzione e poco merito) ",
   "iti70:6.2": "nella propria breve vita. ",
