--- a/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti71:3.4": "Tutto quello che vi dico l’ho conosciuto, visto e compreso di persona. ",
   "iti71:5.1": "Dirigendo la mente correttamente, ",
   "iti71:5.2": "proferendo parole correttamente, ",
-  "iti71:5.3": "compiendo azioni corporali correttamente, "
+  "iti71:5.3": "compiendo azioni corporali correttamente, ",
+  "iti71:5.4": "così la persona "
 }
