Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
@@ -7,5 +7,5 @@
   "iti71:5.2": "proferendo parole correttamente, ",
   "iti71:5.3": "compiendo azioni corporali correttamente, ",
   "iti71:5.4": "così la persona ",
-  "iti71:6.1": "molto istruita, che compie azioni meritevoli, "
+  "iti71:6.1": "molto istruita compie azioni meritevoli "
 }
