--- a/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti71_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti71:5.3": "compiendo azioni corporali correttamente, ",
   "iti71:5.4": "così la persona ",
   "iti71:6.1": "molto istruita compie azioni meritevoli ",
-  "iti71:6.2": "nella propria breve vita. "
+  "iti71:6.2": "nella propria breve vita. ",
+  "iti71:6.3": "quel gran saggio, quando perisce, [con la distruzione del corpo], * "
 }
