--- a/translation/de/sabbamitta/sutta/an/an9/an9.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.83_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an9.83:0.3": "Schwächen bei der Schulung und die Grundlagen übersinnlicher Kraft ",
   "an9.83:1.1": "„Mönche und Nonnen, wenn man sich schult, kommen fünf Schwächen vor. ",
   "an9.83:1.2": "Welche fünf? ",
-  "an9.83:1.3": "Das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen, das Lügen und das Trinken von Alkohol, der nachlässig macht. ",
+  "an9.83:1.3": "Das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen, das Lügen und das Trinken von Rauschmitteln wie Bier, Wein und Branntwein. ",
   "an9.83:1.4": "Das sind die fünf Schwächen, die vorkommen, wenn man sich schult. ",
   "an9.83:2.1": "Um diese fünf Schwächen bei der Schulung aufzugeben, müssen vier Grundlagen übersinnlicher Kraft entwickelt werden. ",
   "an9.83:2.2": "Welche vier? ",
