--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti72:2.2": "Quali tre? ",
   "iti72:2.3": "La via d’uscita dai piaceri dei sensi, ovvero la rinuncia; la via d’uscita dalla materiale, ovvero l’immateriale; la via d’uscita dall’originato, dal creato e dall’origine dipendente delle cose, ovvero la cessazione. ",
   "iti72:3.1": "Avendo conosciuto la via d’uscita dai piaceri dei sensi ",
-  "iti72:3.2": "e il superamento della materialità, ",
+  "iti72:3.2": "e trascendendo la materialità, ",
   "iti72:3.3": "chi è sempre zelante tocca ",
   "iti72:3.4": " la tranquillità di ogni formazione/cosa. ",
   "iti72:4.1": "vedendo correttamente, * ",
