--- a/translation/de/sabbamitta/sutta/an/an6/an6.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.81_translation-de-sabbamitta.json
@@ -8,6 +8,6 @@
   "an6.81:1.4": "Jemand, der diese sechs Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an6.81:2.1": "Jemand, der sechs Eigenschaften besitzt, wird in den Himmel erhoben. ",
   "an6.81:2.2": "Welche sechs? ",
-  "an6.81:2.3": "Er tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. Und er ist genügsam und hat rechte Ansicht. ",
+  "an6.81:2.3": "Er tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen und lügt nicht. Und er ist genügsam und hat rechte Ansicht. ",
   "an6.81:2.4": "Jemand, der diese sechs Eigenschaften besitzt, wird in den Himmel erhoben.“ "
 }
