--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -8,6 +8,6 @@
   "iti72:3.4": "la tranquillità di ogni formazione/cosa. ",
   "iti72:4.1": "Il cercatore che vede correttamente, * ",
   "iti72:4.2": "in questo modo si libera. ",
-  "iti72:4.3": "x ",
+  "iti72:4.3": "",
   "iti72:4.4": "x "
 }
