Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -9,5 +9,5 @@
   "iti72:4.1": "Il cercatore che vede correttamente, * ",
   "iti72:4.2": "in questo modo si libera. ",
   "iti72:4.3": "",
-  "iti72:4.4": "x "
+  "iti72:4.4": "che è andato oltre le catene. * "
 }
