Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.43_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.43_translation-de-sabbamitta.json
@@ -46,7 +46,7 @@
   "an8.43:6.9": "Das habe ich gemeint, als ich sagte: ",
   "an8.43:6.10": "‚Menschliches Königtum ist im Vergleich zum Glück der Götter dürftig.‘ ",
   "an8.43:7.1": "Du solltest keine lebenden Geschöpfe töten oder stehlen, ",
-  "an8.43:7.2": "lügen oder Alkohol trinken. ",
+  "an8.43:7.2": "lügen oder Branntwein trinken. ",
   "an8.43:7.3": "Sei keusch, halte dich von Geschlechtsverkehr fern, ",
   "an8.43:7.4": "iss nicht nachts und zur falschen Zeit. ",
   "an8.43:8.1": "Trag keine Kränze, keinen Duft, ",
