--- a/translation/de/sabbamitta/sutta/an/an8/an8.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.45_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "an8.45:6.10": "Das habe ich gemeint, als ich sagte: ",
   "an8.45:6.11": "‚Menschliches Königtum ist im Vergleich zum Glück der Götter dürftig.‘ ",
   "an8.45:7.1": "Du solltest keine lebenden Geschöpfe töten oder stehlen, ",
-  "an8.45:7.2": "lügen oder Alkohol trinken. ",
+  "an8.45:7.2": "lügen oder Branntwein trinken. ",
   "an8.45:7.3": "Sei keusch, halte dich von Geschlechtsverkehr fern, ",
   "an8.45:7.4": "iss nicht nachts und zur falschen Zeit. ",
   "an8.45:8.1": "Trag keine Kränze, keinen Duft, ",
