Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -2068,7 +2068,7 @@
   "sn-name:2067.sn56.61": "Nicht als Menschen ",
   "sn-name:2068.sn56.62": "In Grenzgebieten ",
   "sn-name:2069.sn56.63": "Weisheit ",
-  "sn-name:2070.sn56.64": "Alkohol trinken ",
+  "sn-name:2070.sn56.64": "Bier und Wein ",
   "sn-name:2071.sn56.65": "Im Wasser geboren ",
   "sn-name:2072.sn56.66": "Achtung vor der Mutter ",
   "sn-name:2073.sn56.67": "Achtung vor dem Vater ",
