--- a/translation/de/sabbamitta/sutta/sn/sn14/sn14.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn14/sn14.25_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "sn14.25:1.4": "die, die stehlen … ",
   "sn14.25:1.5": "die, die sexuelle Verfehlungen begehen … ",
   "sn14.25:1.6": "die, die lügen … ",
-  "sn14.25:1.7": "die, die Alkohol trinken, der nachlässig macht … ",
+  "sn14.25:1.7": "die, die Rauschmittel wie Bier, Wein und Branntwein trinken … ",
   "sn14.25:2.1": "die, die das Töten lebender Geschöpfe unterlassen … ",
   "sn14.25:2.2": "die, die das Stehlen unterlassen … ",
   "sn14.25:2.3": "die, die das Begehen sexueller Verfehlungen unterlassen … ",
