--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti73:2.1": "Cercatori, l’immateriale è più sereno (placido) del materiale, ma la cessazione è molto più serena dell’immateriale. ",
-  "iti73:3.1": "Le creature con un corpo fisico ",
+  "iti73:3.1": "Le creature con un corpo materiale ",
   "iti73:3.2": "e quelle che vivono nei reami senza forma (immateriali), ",
   "iti73:3.3": "non conoscendo la cessazione ",
   "iti73:3.4": "tornano a nuova esistenza.* ",
