--- a/translation/de/sabbamitta/sutta/sn/sn37/sn37.33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn37/sn37.33_translation-de-sabbamitta.json
@@ -4,6 +4,6 @@
   "sn37.33:0.3": "Mit Selbstvertrauen leben ",
   "sn37.33:1.1": "„Mönche und Nonnen, eine Frauensperson, die zu Hause lebt und fünf Eigenschaften besitzt, ist selbstbewusst. ",
   "sn37.33:1.2": "Welche fünf? ",
-  "sn37.33:1.3": "Sie tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
+  "sn37.33:1.3": "Sie tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "sn37.33:1.4": "Eine Frauensperson, die zu Hause lebt und diese fünf Eigenschaften besitzt, ist selbstbewusst.“ "
 }
