--- a/translation/de/sabbamitta/sutta/sn/sn37/sn37.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn37/sn37.24_translation-de-sabbamitta.json
@@ -4,6 +4,6 @@
   "sn37.24:0.3": "Fünf Ethikregeln ",
   "sn37.24:1.1": "„Anuruddha, wenn Frauenspersonen fünf Eigenschaften besitzen, werden sie, wenn ihr Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren, in einer himmlischen Welt. ",
   "sn37.24:1.2": "Welche fünf? ",
-  "sn37.24:1.3": "Sie töten keine lebenden Geschöpfe, stehlen nicht, begehen keine sexuellen Verfehlungen, lügen nicht und trinken keinen Alkohol, der nachlässig macht. ",
+  "sn37.24:1.3": "Sie töten keine lebenden Geschöpfe, stehlen nicht, begehen keine sexuellen Verfehlungen, lügen nicht und trinken keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "sn37.24:1.4": "Wenn Frauenspersonen diese fünf Eigenschaften besitzen, werden sie, wenn ihr Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren, in einer himmlischen Welt.“ "
 }
