--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti73:3.2": "e quelle che vivono nei reami immateriali, ",
   "iti73:3.3": "non conoscendo la cessazione ",
   "iti73:3.4": "tornano a nuova esistenza.* ",
-  "iti73:4.1": "Ma la gente che comprende completamente il materiale, ",
+  "iti73:4.1": "Ma la gente che comprende il materiale, ",
   "iti73:4.2": "senza arenarsi (fermarsi) in quello immateriale, ",
   "iti73:4.3": "si libera con la cessazione,* ",
   "iti73:4.4": "lasciandosi la morte alle spalle. * ",
