--- a/translation/de/sabbamitta/sutta/sn/sn37/sn37.14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn37/sn37.14_translation-de-sabbamitta.json
@@ -4,6 +4,6 @@
   "sn37.14:0.3": "Fünf Bedrohungen ",
   "sn37.14:1.1": "„Anuruddha, wenn Frauenspersonen fünf Eigenschaften besitzen, werden sie, wenn ihr Körper auseinanderbricht, nach dem Tod, an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle. ",
   "sn37.14:1.2": "Welche fünf? ",
-  "sn37.14:1.3": "Sie töten lebende Geschöpfe, stehlen, begehen sexuelle Verfehlungen, lügen und trinken Alkohol, der nachlässig macht. ",
+  "sn37.14:1.3": "Sie töten lebende Geschöpfe, stehlen, begehen sexuelle Verfehlungen, lügen und trinken Rauschmittel wie Bier, Wein und Branntwein. ",
   "sn37.14:1.4": "Wenn Frauenspersonen diese fünf Eigenschaften besitzen, werden sie, wenn ihr Körper auseinanderbricht, nach dem Tod, an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle.“ "
 }
