--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti73:3.3": "non conoscendo la cessazione ",
   "iti73:3.4": "tornano a nuova esistenza.* ",
   "iti73:4.1": "Chi comprende il materiale, ",
-  "iti73:4.2": "senza arenarsi (fermarsi) in quello immateriale, ",
+  "iti73:4.2": "senza arenarsi (fermarsi) nell’immateriale, ",
   "iti73:4.3": "si libera con la cessazione,* ",
   "iti73:4.4": "lasciandosi la morte alle spalle. * ",
   "iti73:5.1": "Avendo toccato con il proprio corpo (di persona?) l’elemento del senza morte ",
