--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti73:4.2": "senza arenarsi (fermarsi) nell’immateriale, ",
   "iti73:4.3": "si libera con la cessazione,* ",
   "iti73:4.4": "lasciandosi la morte alle spalle. * ",
-  "iti73:5.1": "Avendo toccato di persona lo stato del senza morte (libero dalla morte) ",
+  "iti73:5.1": "Avendo toccato di persona lo stato del senza morte (privo di morte) ",
   "iti73:5.2": "e la non acquisizione ",
   "iti73:5.3": "x ",
   "iti73:5.4": "x ",
