Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti73:4.4": "lasciandosi la morte alle spalle. * ",
   "iti73:5.1": "Avendo toccato di persona lo stato del senza morte (privo di morte) ",
   "iti73:5.2": "senza base per la rinascita (senza acquisizione),** ",
-  "iti73:5.3": "x ",
+  "iti73:5.3": "la persona senza compulsioni realizza ",
   "iti73:5.4": "x ",
   "iti73:5.5": "x ",
   "iti73:5.6": "x "
