Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.42_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.42_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn12.42:2.3": "der stiehlt … ",
   "sn12.42:2.4": "der sexuelle Verfehlungen begeht … ",
   "sn12.42:2.5": "der lügt … ",
-  "sn12.42:2.6": "oder der Alkohol trinkt, der nachlässig macht … ",
+  "sn12.42:2.6": "oder der Rauschmittel wie Bier, Wein und Branntwein trinkt … ",
   "sn12.42:2.7": "Das sind die fünf Gefahren und Bedrohungen, die er gebannt hat. ",
   "sn12.42:3.1": "Was sind die vier Faktoren des Stromeintritts, die er besitzt? ",
   "sn12.42:3.2": "Da hat ein edler Schüler auf Erfahrung gegründete Zuversicht zum Buddha: ",
