--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti73:5.1": "Avendo toccato di persona lo stato del senza morte (privo di morte) ",
   "iti73:5.2": "senza base per la rinascita (senza acquisizione),** ",
   "iti73:5.3": "la persona senza compulsioni realizza ",
-  "iti73:5.4": "x ",
+  "iti73:5.4": "il lasciare andare di qualsiasi base per la rinascita (acquisizione). ",
   "iti73:5.5": "x ",
   "iti73:5.6": "x "
 }
