Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti73_translation-it-soma.json
@@ -12,6 +12,6 @@
   "iti73:5.2": "senza base per la rinascita (senza acquisizione),** ",
   "iti73:5.3": "la persona senza compulsioni realizza ",
   "iti73:5.4": "il lasciare andare di qualsiasi base per la rinascita (acquisizione). ",
-  "iti73:5.5": "x ",
+  "iti73:5.5": "il Buddha perfettamente risvegliato insegna ",
   "iti73:5.6": "x "
 }
