Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.41_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.41_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn12.41:4.1": "Jeder, der stiehlt, schafft Gefahren und Bedrohungen sowohl in diesem als auch in künftigen Leben und empfindet seelischen Schmerz und Traurigkeit. Für jeden, der das Stehlen unterlässt, ist diese Gefahr und Bedrohung gebannt. ",
   "sn12.41:5.1": "Jeder, der sexuelle Verfehlungen begeht, schafft Gefahren und Bedrohungen sowohl in diesem als auch in künftigen Leben und empfindet seelischen Schmerz und Traurigkeit. Für jeden, der es unterlässt, sexuelle Verfehlungen zu begehen, ist diese Gefahr und Bedrohung gebannt. ",
   "sn12.41:6.1": "Jeder, der lügt, schafft Gefahren und Bedrohungen sowohl in diesem als auch in künftigen Leben und empfindet seelischen Schmerz und Traurigkeit. Für jeden, der das Lügen unterlässt, ist diese Gefahr und Bedrohung gebannt. ",
-  "sn12.41:7.1": "Jeder, der Alkohol trinkt, der nachlässig macht, schafft Gefahren und Bedrohungen sowohl in diesem als auch in künftigen Leben und empfindet seelischen Schmerz und Traurigkeit. Für jeden, der es unterlässt, Alkohol zu trinken, der nachlässig macht, ist diese Gefahr und Bedrohung gebannt. ",
+  "sn12.41:7.1": "Jeder, der Rauschmittel wie Bier, Wein und Branntwein trinkt, schafft Gefahren und Bedrohungen sowohl in diesem als auch in künftigen Leben und empfindet seelischen Schmerz und Traurigkeit. Für jeden, der es unterlässt, Rauschmittel wie Bier, Wein und Branntwein zu trinken, ist diese Gefahr und Bedrohung gebannt. ",
   "sn12.41:7.2": "Das sind die fünf Gefahren und Bedrohungen, die er gebannt hat. ",
   "sn12.41:8.1": "Was sind die vier Faktoren des Stromeintritts, die er besitzt? ",
   "sn12.41:8.2": "Da hat ein edler Schüler auf Erfahrung gegründete Zuversicht zum Buddha: ",
