Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti74:2.1": "Questi tre tipi di figli si trovano nel mondo. ",
+  "iti74:2.1": "Questi tre tipi di giovani si trovano nel mondo. ",
   "iti74:2.2": "Quali tre? ",
   "iti74:2.3": "Uno nato in una classe sociale superiore, identica, o inferiore. ",
   "iti74:3.1": "E come nasce un figlio in una classe sociale superiore? ",
