--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti74:2.2": "Quali tre? ",
   "iti74:2.3": "Quelli nati in una classe sociale superiore, identica, o inferiore. ",
   "iti74:3.1": "E come nasce un figlio in una classe sociale superiore? ",
-  "iti74:3.2": "Qui la madre e il padre del figlio ",
+  "iti74:3.2": "In questo caso la madre e il padre del figlio ",
   "iti74:3.3": "non prendono rifugio nel Buddha, nel Dhamma e nel Sangha. ",
   "iti74:3.4": "Non si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare sostanze intossicanti e hanno cattive abitudini immorali. ",
   "iti74:3.5": "Il loro figlio invece si comporta al contrario. ",
