--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -126,7 +126,7 @@
   "mn81:18.4": "Nun, großer König, als du dachtest: ‚Der Buddha nimmt meine Einladung, die Regenzeit in Varanasi zu verbringen, nicht an‘, da wurdest du traurig und aufgebracht. ",
   "mn81:18.5": "Aber Ghaṭīkāra ist nicht aufgebracht, noch wird er es werden. ",
   "mn81:18.6": "Ghaṭīkāra hat Zuflucht zum Buddha, zur Lehre und zum Saṅgha genommen. ",
-  "mn81:18.7": "Er tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
+  "mn81:18.7": "Er tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "mn81:18.8": "Er hat auf Erfahrung gegründete Zuversicht zum Buddha, zur Lehre und zum Saṅgha und besitzt das sittliche Verhalten, das von den Edlen geliebt wird. ",
   "mn81:18.9": "Er ist frei von Zweifel bezüglich des Leidens, des Ursprungs des Leidens, des Aufhörens des Leidens und der Übung, die zum Aufhören des Leidens führt. ",
   "mn81:18.10": "Er isst zu einer Tageszeit. Er lebt keusch, ist sittlich und hat einen guten Charakter. ",
