--- a/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "dn31:7.1": "„Welche sechs Abflüsse für sein Vermögen vermeidet er? ",
   "dn31:7.2": "Wenn man sich gewohnheitsmäßig dem Trinken von Rauschmitteln wie Bier, Wein und Branntwein hingibt, führt das zu einem Abfluss des Vermögens; wenn man sich gewohnheitsmäßig nachts in den Straßen herumtreibt, Feste besucht, Glücksspiel betreibt, schlechte Freunde hat oder träge ist, führt das zu einem Abfluss des Vermögens. ",
   "dn31:8.0": "5. Sechs Nachteile des Trinkens ",
-  "dn31:8.1": "Es gibt diese sechs Nachteile des gewohnheitsmäßigen Alkoholtrinkens: ",
+  "dn31:8.1": "Es gibt diese sechs Nachteile des gewohnheitsmäßigen Trinkens von Rauschmitteln wie Bier, Wein und Branntwein: ",
   "dn31:8.2": "Man verliert hier und jetzt Vermögen; man provoziert Zänkereien; man ist anfällig für Krankheiten; man hat einen schlechten Ruf; man zeigt sich in unanständiger Weise; und als sechstes wird die Weisheit geschwächt. ",
   "dn31:8.3": "Das sind die sechs Nachteile des gewohnheitsmäßigen Alkoholtrinkens. ",
   "dn31:9.0": "6. Sechs Nachteile des nächtlichen Sichherumtreibens in den Straßen ",
