--- a/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
@@ -54,7 +54,7 @@
   "dn31:8.0": "5. Sechs Nachteile des Trinkens ",
   "dn31:8.1": "Es gibt diese sechs Nachteile des gewohnheitsmäßigen Trinkens von Rauschmitteln wie Bier, Wein und Branntwein: ",
   "dn31:8.2": "Man verliert hier und jetzt Vermögen; man provoziert Zänkereien; man ist anfällig für Krankheiten; man hat einen schlechten Ruf; man zeigt sich in unanständiger Weise; und als sechstes wird die Weisheit geschwächt. ",
-  "dn31:8.3": "Das sind die sechs Nachteile des gewohnheitsmäßigen Alkoholtrinkens. ",
+  "dn31:8.3": "Das sind die sechs Nachteile des gewohnheitsmäßigen Trinkens von Rauschmitteln wie Bier, Wein und Branntwein. ",
   "dn31:9.0": "6. Sechs Nachteile des nächtlichen Sichherumtreibens in den Straßen ",
   "dn31:9.1": "Es gibt diese sechs Nachteile des nächtlichen Sichherumtreibens in den Straßen: ",
   "dn31:9.2": "Man selbst, die Partnerinnen und Kinder und der Besitz sind nicht bewacht; man wird schlechter Taten verdächtigt; falsche Gerüchte verbreiten sich über einen; und man steht in vorderster Reihe bei vielen Dingen, die zu Leiden führen. ",
