--- a/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
@@ -289,7 +289,7 @@
   "dn5:25.4": "„Wenn jemand mit zuversichtlichem Herzen Zuflucht zum Buddha, zur Lehre und zum Saṅgha nimmt.“ ",
   "dn5:26.1": "„Aber gibt es noch irgendein anderes Opfer, das weniger Voraussetzungen und Aufwand erfordert und reichere Frucht und größeren Vorteil bringt?“ ",
   "dn5:26.4": "„Wenn jemand mit zuversichtlichem Herzen die Schulungsregeln unternimmt, ",
-  "dn5:26.5": "das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen, das Lügen und das Trinken von Alkohol, der nachlässig macht, zu unterlassen.“ ",
+  "dn5:26.5": "das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen, das Lügen und das Trinken von Rauschmitteln wie Bier, Wein und Branntwein zu unterlassen.“ ",
   "dn5:27.1": "„Aber gibt es noch irgendein anderes Opfer, das weniger Voraussetzungen und Aufwand erfordert und reichere Frucht und größeren Vorteil bringt?“ ",
   "dn5:27.2": "„Das gibt es, Brahmane. ",
   "dn5:27.4": "Da erscheint ein Klargewordener in der Welt, vollendet, ein vollkommen erwachter Buddha … ",
