--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -22,7 +22,7 @@
   "iti74:5.8": "In questo modo il figlio è nato in una classe sociale peggiore. (È così che un figlio ha una nascita inferiore) ",
   "iti74:6.1": "I saggi desiderano che i propri figli ",
   "iti74:6.2": "nascano in una classe sociale migliore o identica, (abbiano una nascita migliore o equiparabile) ",
-  "iti74:6.3": "non in una peggiore, ",
+  "iti74:6.3": "non in una peggiore, (non una peggiore,) ",
   "iti74:6.4": "cosa che invece ammorberebbe la famiglia. ",
   "iti74:7.1": "Quei tipi di figli nel mondo ",
   "iti74:7.2": "diventano discepoli laici ",
