--- a/translation/de/sabbamitta/sutta/dn/dn24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn24_translation-de-sabbamitta.json
@@ -135,7 +135,7 @@
   "dn24:1.11.1": "Dieses eine Mal, Bhaggava, hielt ich mich bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
   "dn24:1.11.2": "Nun befand sich damals in Vesālī der nackte Asket Kaḷāramaṭṭaka. Und er hatte in der Hauptstadt der Vajjier den Gipfel an materiellem Besitz und Ruhm erlangt. ",
   "dn24:1.11.3": "Er hatte diese sieben Gelübde aufgenommen: ",
-  "dn24:1.11.4": "‚Solange ich lebe, werde ich ein nackter Asket sein und keine Kleider tragen. Solange ich lebe, werde ich keusch sein und keinen Geschlechtsverkehr haben. Solange ich lebe, werde ich nur Fleisch und Alkohol verzehren, weder Reis noch Brei essen. ",
+  "dn24:1.11.4": "‚Solange ich lebe, werde ich ein nackter Asket sein und keine Kleider tragen. Solange ich lebe, werde ich keusch sein und keinen Geschlechtsverkehr haben. Solange ich lebe, werde ich nur Fleisch und Bier verzehren und weder Reis noch Brei essen. ",
   "dn24:1.11.5": "Und an diesen Baumheiligtümern bei Vesālī werde ich nicht vorbeigehen: am Udena-Heiligtum im Osten, am Gotamaka-Heiligtum im Süden, am Sieben-Mädchen-Heiligtum im Westen und am Viele-Kinder-Heiligtum im Norden.‘ ",
   "dn24:1.11.6": "Und es war, weil er diese sieben Gelübde aufgenommen hatte, dass er den Gipfel an materiellem Besitz und Ruhm erlangt hatte. ",
   "dn24:1.12.1": "Da ging also, Bhaggava, Sunakkhatta zu Kaḷāramaṭṭaka und stellte ihm eine Frage. ",
