--- a/translation/de/sabbamitta/sutta/dn/dn32_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn32_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "dn32:2.7": "und manche nicht. ",
   "dn32:2.8": "Aber zum großen Teil haben die Geister keine Zuversicht zum Buddha. ",
   "dn32:2.9": "Warum ist das so? ",
-  "dn32:2.10": "Weil der Buddha sie lehrt, das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen, das Lügen und das Trinken von Alkohol, der nachlässig macht, zu unterlassen. ",
+  "dn32:2.10": "Weil der Buddha sie lehrt, das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen, das Lügen und das Trinken von Rauschmitteln wie Bier, Wein und Branntwein zu unterlassen. ",
   "dn32:2.11": "Doch zum großen Teil unterlassen sie diese Dinge nicht. ",
   "dn32:2.12": "Es ist ihnen unlieb und verhasst. ",
   "dn32:2.13": "Herr, es gibt Schüler des Buddha, die abgelegene Unterkünfte in der Wildnis und im Wald aufsuchen, die ruhig und still sind, weit weg von der tollen Menge, fern von menschlichen Siedlungen und für die Klausur geeignet. ",
