Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "kp2:2.1": "Ich nehme die Schulungsregel auf, das Stehlen zu unterlassen. ",
   "kp2:3.1": "Ich nehme die Schulungsregel auf, Geschlechtsverkehr zu unterlassen. ",
   "kp2:4.1": "Ich nehme die Schulungsregel auf, das Lügen zu unterlassen. ",
-  "kp2:5.1": "Ich nehme die Schulungsregel auf, das Trinken von Alkohol, der nachlässig macht, zu unterlassen. ",
+  "kp2:5.1": "Ich nehme die Schulungsregel auf, das Trinken von Rauschmitteln wie Bier, Wein und Branntwein zu unterlassen. ",
   "kp2:6.1": "Ich nehme die Schulungsregel auf, das Essen zur falschen Zeit zu unterlassen. ",
   "kp2:7.1": "Ich nehme die Schulungsregel auf, den Besuch von Tanz-, Gesangs- und Musikvorführungen zu unterlassen. ",
   "kp2:8.1": "Ich nehme die Schulungsregel auf, es zu unterlassen, mich mit Kränzen, Düften und Make-up zu verschönern und zu schmücken. ",
