Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti75:5.1": "E com’è la persona come una nube che piove ovunque? ",
   "iti75:5.2": "È quando offre doni a tutti. ",
   "iti75:6.1": "Chi non dà né a contemplativi, né a brahmani, ",
-  "iti75:6.2": "ne’ a poveri/accattoni, pellegrini o straccioni, ",
+  "iti75:6.2": "né a poveri/accattoni, pellegrini o straccioni, ",
   "iti75:6.3": "quel che ha ricevuto (gli è stato dato) [--> le sue provviste di cibo e bevande] ",
   "iti75:6.4": "da mangiare o da bere, ",
   "iti75:6.5": "questo è chiamato una nube che non piove da nessuna parte, *** ",
