Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/dhp/dhp235-255_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp235-255_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp235-255_translation-de-sabbamitta.json
@@ -67,7 +67,7 @@
   "dhp250:1": "Aber wer dieses abgeschnitten, ",
   "dhp250:2": "es mit der Wurzel ausgegraben und ausgerottet hat, ",
   "dhp250:3": "der wird bei Tag und bei Nacht ",
-  "dhp250:4": "im Samadhi versinken. ",
+  "dhp250:4": "im Samādhi versinken. ",
   "dhp251:1": "Es gibt kein Feuer wie Gier, ",
   "dhp251:2": "kein Verbrechen wie Hass, ",
   "dhp251:3": "kein Netz wie Täuschung, ",
