Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/kp/kp5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/kp/kp5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp5_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "kp5:7.3": "tun, was nicht zu tadeln ist: ",
   "kp5:7.4": "Das ist der höchste Segen. ",
   "kp5:8.1": "Dem Bösen widerstehen, es vermeiden, ",
-  "kp5:8.2": "auf Alkohol verzichten, ",
+  "kp5:8.2": "auf das Branntweintrinken verzichten, ",
   "kp5:8.3": "Beflissenheit bei guten Eigenschaften: ",
   "kp5:8.4": "Das ist der höchste Segen. ",
   "kp5:9.1": "Achtung und Bescheidenheit, ",
