Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -25,7 +25,7 @@
   "iti75:9.2": "tuonando, gronda acqua [da tutte le parti] ",
   "iti75:9.3": "e riempie pieni zeppi d’acqua ",
   "iti75:9.4": "altipiani e valli. ",
-  "iti75:10.1": "allo stesso modo una ",
+  "iti75:10.1": "Allo stesso modo una ",
   "iti75:10.2": "persona di quel tipo, ",
   "iti75:10.3": "dopo aver accumulato virtù, ",
   "iti75:10.4": "e per questo ottenuto \nricchezza con il duro lavoro, ",
