Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
@@ -23,7 +23,7 @@
   "iti76:7.1": "Come se una persona incartasse del pesce marcio ",
   "iti76:7.2": "in dell’erba kusa, ",
   "iti76:7.3": "finirebbe per appestare tutta l’erba, ",
-  "iti76:7.4": "così accade a chi si circonda di folli. ",
+  "iti76:7.4": "lo stesso accade a chi si circonda di folli. ",
   "iti76:8.1": "Come se una persona incartasse del gelsomino ",
   "iti76:8.2": "in del fogliame, ",
   "iti76:8.3": "finirebbe con delle fronde profumate, ",
