Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
@@ -32,6 +32,6 @@
   "iti76:9.2": "Conoscendo le conseguenze delle proprie azioni, ",
   "iti76:9.3": "il saggio non si assocerebbe con i non virtuosi ",
   "iti76:9.4": "ma sempre e solo con i virtuosi. ",
-  "iti76:9.5": "la non virtù conduce all'inferno ",
+  "iti76:9.5": "La non virtù conduce all'inferno, ",
   "iti76:9.6": "la virtù conduce in una buona destinazione. "
 }
