Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -18,5 +18,5 @@
   "iti78:8.1": "In solitudine come gli Arahant, ",
   "iti78:8.2": "resoluto come i praticanti del Jhāna, ",
   "iti78:8.3": "sempre strenuo, ",
-  "iti78:8.4": "uno vive insieme ai saggi. "
+  "iti78:8.4": "vivrebbe insieme ai saggi. "
 }
