Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -17,6 +17,6 @@
   "iti78:7.4": "indolenza e debolezza. ",
   "iti78:8.1": "In solitudine come gli Arahant, ",
   "iti78:8.2": "resoluti come i praticanti del Jhāna, ",
-  "iti78:8.3": "sempre strenuo, ",
+  "iti78:8.3": "sempre strenui, ",
   "iti78:8.4": "si dovrebbe vivere insieme ai saggi. "
 }
