Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti78:6.3": "Come una persona appoggiata su un piccolo tronco ",
   "iti78:6.4": "nel grande oceano, affonderebbe, ",
   "iti78:7.1": "allo stesso modo se uno si circonda di persone indolenti, ",
-  "iti78:7.2": "anche se vive una vita morale, sprofonderebbe. ",
+  "iti78:7.2": "anche se vive una vita morale, affonderebbe. ",
   "iti78:7.3": "Per quello si dovrebbero evitare ",
   "iti78:7.4": "indolenza e debolezza. ",
   "iti78:8.1": "In solitudine come gli Arahant, ",
