Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti78:6.1": "La smania nasce dalla aggregazione, ",
   "iti78:6.2": "ma è stroncata dalla non aggregazione. ",
   "iti78:6.3": "Come una persona appoggiata su un piccolo tronco ",
-  "iti78:6.4": "nel grande oceano, cadrebbe giù, ",
+  "iti78:6.4": "nel grande oceano, cadrebbe giù (affonderebbe), ",
   "iti78:7.1": "allo stesso modo se uno si circonda di persone indolenti, ",
   "iti78:7.2": "anche se vive una vita morale, affonderebbe. ",
   "iti78:7.3": "Per quello si dovrebbero evitare ",
