Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -15,6 +15,6 @@
   "iti79:4.4": "di ottenere la suprema illuminazione. ",
   "iti79:5.1": "Per quello si dovrebbero avere poche cose da fare, ",
   "iti79:5.2": "essere poco sonnolenti e non agitati. ",
-  "iti79:5.3": "questo tipo di cercatore è capace ",
+  "iti79:5.3": "Un cercatore di questo tipo è capace ",
   "iti79:5.4": "di ottenere la suprema illuminazione. "
 }
