Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti81:2.1": "Cercatori, ho visto con i miei occhi che le creature con il cuore sopraffatto e ossessionato dall’onore, dal disonore e da entrambi, dopo la morte, quando il corpo perisce, rinascono in uno stato di perdizione*, di sventura*, di dannazione*, all’inferno. ",
   "iti81:3.1": "",
   "iti81:4.1": "",
-  "iti81:5.1": "xx ",
+  "iti81:5.1": "Cercatori, io non vi dico questo perché l’ho sentito da altri asceti o brahmani. ",
   "iti81:5.2": "xx ",
   "iti81:9.1": "Sia che uno venga elogiato ",
   "iti81:9.2": "o meno, ",
