Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
@@ -11,5 +11,5 @@
   "iti81:10.1": "Un praticante del Jhāna, scrupoloso, ",
   "iti81:10.2": "dal sottile acume e dalla corretta visione, ",
   "iti81:10.3": "è felice di smettere di alimentare il fuoco ",
-  "iti81:10.4": "e viene chiamato la buona persona. "
+  "iti81:10.4": "e viene chiamato una buona persona. "
 }
