Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "mn16:24.1": "Er führt das geistliche Leben nicht in der Hoffnung, in einer Klasse von Göttern wiedergeboren zu werden: ‚Dass ich doch durch diese Regel, dieses Gelübde, diese inbrünstige Bußübung oder dieses geistliche Leben einer der Götter werde!‘ ",
   "mn16:24.2": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "mn16:24.3": "Das ist die fünfte seelische Kette, die durchtrennt ist. ",
-  "mn16:24.4": "Das sind die fünf seelischen Ketten, die er durchtrennt hat. ",
+  "mn16:24.4": "Das sind die fünf seelischen Ketten, die durchtrennt sind. ",
   "mn16:25.1": "Wenn ein Mönch diese fünf Arten seelischer Öde aufgegeben und diese fünf seelische Ketten durchtrennt hat, ist es gut möglich, dass er Wachstum, Zunahme oder Reife in dieser Lehre und Schulung erlangt. ",
   "mn16:26.1": "Er entwickelt die Grundlage übersinnlicher Kraft, die mit Versenkung durch Enthusiasmus und mit aktivem Bemühen einhergeht. ",
   "mn16:26.2": "Er entwickelt die Grundlage übersinnlicher Kraft, die mit Versenkung durch Energie und mit aktivem Bemühen einhergeht. ",
