Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -13,5 +13,5 @@
   "iti63:5.1": "è uno che ha perfezionato il descrivibile. (le cose descrivibili) ",
   "iti63:5.2": "Il placido saggio si delizia nello stato di placidità, ",
   "iti63:5.3": "un praticante (per uno che usa le parole) fermamente stabilito nel Dhamma che ha annoverato (capito) // uno che usa le designazioni ",
-  "iti63:5.4": "è uno che ha perfetta conoscenza e non può essere annoverato. (classificato) "
+  "iti63:5.4": "è uno che ha perfetta conoscenza e non può essere designato. (classificato) "
 }
