Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -12,6 +12,6 @@
   "iti63:4.4": "lo stato di placidità più alto, ",
   "iti63:5.1": "è uno che ha perfezionato il descrivibile. (le cose descrivibili) ",
   "iti63:5.2": "Il placido saggio si delizia nello stato di placidità, ",
-  "iti63:5.3": "uno che usa le designazioni fermamente stabilito nel Dhamma [un praticante (per uno che usa le parole) fermamente stabilito nel Dhamma che ha annoverato (capito) //] ",
+  "iti63:5.3": "uno che usa la designazione fermamente stabilito nel Dhamma [un praticante (per uno che usa le parole) fermamente stabilito nel Dhamma che ha annoverato (capito) //] ",
   "iti63:5.4": "ha perfetta conoscenza (LOOK FOR SYNOMYMS***) e non può essere designato. [(classificato)] "
 }
