Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
@@ -7,6 +7,6 @@
   "iti68:3.2": "e ignoranza, ",
   "iti68:3.3": "è uno che si è completato. ",
   "iti68:3.4": "È detto uno che è diventato divino, un Tathāgata, ",
-  "iti68:3.5": "un Buddha, uno che è andato oltre l’ostilità e la paura, ",
+  "iti68:3.5": "un risvegliato, uno che è andato oltre l’ostilità e la paura, ",
   "iti68:3.6": "e che ha abbandonato tutto. "
 }
