Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn55/sn55.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn55/sn55.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn55/sn55.6_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "sn55.6:17.2": "Da hat ein edler Schüler auf Erfahrung gegründete Zuversicht zum Buddha … ",
   "sn55.6:17.4": "zur Lehre … ",
   "sn55.6:17.5": "und zum Saṅgha … ",
-  "sn55.6:17.6": "Und er lebt zu Hause und hat den Fleck des Geizes entfernt, gibt großzügig her, hat eine offene Hand, freut sich am Loslassen, ist der Wohltätigkeit verpflichtet und liebt es, zu geben und zu teilen. ",
+  "sn55.6:17.6": "Und er lebt im Haus, hat den Fleck des Geizes entfernt, gibt großzügig her, hat eine offene Hand, freut sich am Loslassen, ist der Wohltätigkeit verpflichtet und liebt es, zu geben und zu teilen. ",
   "sn55.6:17.7": "Ein edler Schüler, der diese vier Dinge besitzt, ist einer, der in den Strom eingetreten ist, der nicht mehr in der Unterwelt wiedergeboren werden muss und der für das Erwachen bestimmt ist. ",
   "sn55.6:18.1": "Ihr habt auf Erfahrung gegründete Zuversicht zum Buddha … ",
   "sn55.6:18.3": "zur Lehre … ",
