Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an6.16:1.3": "Da sagte Nakulas Mutter, die Hausbesitzerin, zu ihm: ",
   "an6.16:2.1": "„Hausbesitzer, stirb nicht mit Sorgen. ",
   "an6.16:2.2": "Mit Sorgen zu sterben, ist Leiden, ",
-  "an6.16:2.3": "und sie werden vom Buddha getadelt. ",
+  "an6.16:2.3": "und es wird vom Buddha getadelt. ",
   "an6.16:2.4": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:2.5": "‚Wenn ich nicht mehr da bin, wird Nakulas Mutter, die Hausbesitzerin, nicht in der Lage sein, die Kinder zu versorgen und für den Haushalt genug Teppiche zu haben.‘ ",
   "an6.16:2.6": "Aber so sollst du es nicht sehen. ",
