Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -15,6 +15,7 @@
   "an6.16:2.8": "Ich bin in der Lage, die Kinder zu versorgen und für den Haushalt genug Teppiche zu haben. ",
   "an6.16:2.9": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
   "an6.16:2.10": "Mit Sorgen zu sterben, ist Leiden, ",
+  "an6.16:2.11": "und es wird vom Buddha getadelt. ",
   "an6.16:3.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:3.2": "‚Wenn ich nicht mehr da bin, wird Nakulas Mutter, die Hausbesitzerin, einen anderen Mann nehmen.‘ ",
   "an6.16:3.3": "Aber so sollst du es nicht sehen. ",
