Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti70:3.4": "Tutto quello che vi dico l’ho conosciuto, visto e compreso di persona. ",
   "iti70:4.1": "",
   "iti70:4.2": "",
-  "iti70:5.1": "Dirigendo la mente incorrettamente (nel modo sbagliato), ",
+  "iti70:5.1": "Dirigendo la mente scorrettamente (nel modo sbagliato), ",
   "iti70:5.2": "proferendo parole incorrettamente (nel modo sbagliato), ",
   "iti70:5.3": "compiendo azioni corporali incorrettamente (nel modo sbagliato), ",
   "iti70:5.4": "così la persona ",
